--- a/main.css
+++ b/main.css
@@ -1806,12 +1806,12 @@ ul.icons {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
-  display: flex;
+  display: flex;  
   -moz-justify-content: center;
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-image: url("../../images/banner.jpg");
+  background-image: url("../../images/banner2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
