--- a/main.css
+++ b/main.css
@@ -1806,7 +1806,7 @@ ul.icons {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
-  display: flex;  
+  display: flex;
   -moz-justify-content: center;
   -webkit-justify-content: center;
   -ms-justify-content: center;
@@ -2499,7 +2499,7 @@ body {
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)), url("../../images/banner.jpg");
+  background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)), url("../../images/banner2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
